spade-tests/src/snapshots/spade_tests__data_requirements__enum_cannot_contain_inout.snap
---
source: spade-tests/src/data_requirements.rs
---
enum Type {
    V0,
    V1{x: inout<bool>}
}

fn test() -> Type {
    Type::V0
}


error: Enum members must be `Copy`
  ┌─ testinput:3:11
  │
3 │     V1{x: inout<bool>}
  │           ^^^^^^^^^^^ Non-`Copy` enum member
  │
  ┌─ <str>:1:1
  │
1 │ 
  │ - This type is not `Copy`
  │
  = help: Typically, a type not being Data means it has an `inv` part
  = help: You can learn more about `Copy` here: https://docs.spade-lang.org/wires.html

error: Enum members must be `Data`
  ┌─ testinput:3:11
  │
3 │     V1{x: inout<bool>}
  │           ^^^^^^^^^^^ Non-`Data` enum member
  │
  ┌─ <str>:1:1
  │
1 │ 
  │ - This type is not `Data`
  │
  = help: Typically, a type not being Data means it has a `clock` field
  = help: You can learn more about `Data` here: https://docs.spade-lang.org/wires.html
