spade-tests/src/snapshots/spade_tests__data_requirements__enum_cannot_contain_inv.snap
---
source: spade-tests/src/data_requirements.rs
---
enum Type {
    V0,
    V1{x: inv bool}
}

fn test() -> Type {
    Type::V0
}


error: Enum members must be `Copy`
  ┌─ testinput:3:11
  │
3 │     V1{x: inv bool}
  │           ^^^^^^^^
  │           │
  │           Non-`Copy` enum member
  │           This type is not `Copy`
  │
  = help: Typically, a type not being Data means it has an `inv` part
  = help: You can learn more about `Copy` here: https://docs.spade-lang.org/wires.html
