spade-tests/src/snapshots/spade_tests__data_requirements__enum_cannot_contain_inv_recursive.snap
---
source: spade-tests/src/data_requirements.rs
---
struct RecursivelyInv {
    x: inv bool
}
enum Type {
    V0,
    V1{x: RecursivelyInv}
}

fn test() -> Type {
    Type::V0
}


error: Enum members must be `Copy`
  ┌─ testinput:6:11
  │
2 │     x: inv bool
  │        -------- This type is not `Copy`
  ·
6 │     V1{x: RecursivelyInv}
  │           ^^^^^^^^^^^^^^ Non-`Copy` enum member
  │
  = help: Typically, a type not being Data means it has an `inv` part
  = help: You can learn more about `Copy` here: https://docs.spade-lang.org/wires.html
