spade-tests/src/snapshots/spade_tests__data_requirements__enum_generics_must_be_data.snap
---
source: spade-tests/src/data_requirements.rs
---
trait Tr {}
enum E<T: Tr> {
    A{val: T},
    B,
}

fn test(p: clock) {
    let _ = E::A(p);
}


error: Argument type mismatch. Expected Tr + core::marker::Data got clock
  ┌─ testinput:8:18
  │
2 │ enum E<T: Tr> {
  │           -- Required because of the trait bound specified here
  ·
8 │     let _ = E::A(p);
  │                  ^ clock does not implement Tr and core::marker::Data
